--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -40,8 +40,9 @@ jobs:
           /k:"diegoknsk_fiap-fase4-orderhub-api"
           /o:"diegoknsk"
           /d:sonar.token="$SONAR_TOKEN"
-          /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
+          /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml"
           /d:sonar.coverage.exclusions="**/*Program.cs,**/*Startup.cs,**/Migrations/**,**/*Dto.cs"
+          /d:sonar.ci.autoscan.disabled=true
 
       - name: Restore
         run: dotnet restore FastFood.OrderHub.sln
@@ -55,14 +56,14 @@ jobs:
           --logger "trx;LogFileName=test_results.trx"
           /p:CollectCoverage=true
           /p:CoverletOutputFormat="opencover"
-          /p:CoverletOutput="./TestResults/"
+          /p:CoverletOutput=./TestResults/coverage/
           /p:Exclude="[*]*.Migrations.*"
 
       - name: List coverage files
         run: |
           echo "Coverage files generated:"
           find . -name "coverage.opencover.xml" -type f || echo "No coverage files found"
-          ls -la TestResults/ || echo "TestResults directory not found"
+          ls -la TestResults/coverage/ || echo "TestResults/coverage directory not found"
 
       - name: Sonar - End
         env:
