--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -42,7 +42,7 @@ jobs:
           /d:sonar.token="$SONAR_TOKEN"
           /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml"
           /d:sonar.coverage.exclusions="**/*Program.cs,**/*Startup.cs,**/Migrations/**,**/*Dto.cs"
-          /d:sonar.ci.autoscan.disabled=true
+          /d:sonar.projectBaseDir="${{ github.workspace }}"
 
       - name: Restore
         run: dotnet restore FastFood.OrderHub.sln
