--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -29,17 +29,13 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        # v2.2.0 - Obter SHA do commit da versão v2.2.0 em: https://github.com/aws-actions/amazon-ecr-login
-        # Substituir pelo SHA completo do commit da versão desejada
-        # TODO: Substituir @v2 pelo SHA completo do commit
-        uses: aws-actions/amazon-ecr-login@v2
+        # v2
+        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2
         id: ecr-login
 
       - name: Set up Docker Buildx
-        # v3.3.0 - Obter SHA do commit da versão v3.3.0 em: https://github.com/docker/setup-buildx-action
-        # Substituir pelo SHA completo do commit da versão desejada
-        # TODO: Substituir @v3 pelo SHA completo do commit
-        uses: docker/setup-buildx-action@v3
+        # v3
+        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3
 
       - name: Generate image tag
         id: image-tag
@@ -49,9 +45,8 @@ jobs:
           echo "Image tag: $IMAGE_TAG"
 
       - name: Build and push API image
-        # v5.x.x - Obter SHA do commit da versão desejada em: https://github.com/docker/build-push-action
-        # TODO: Substituir @v5 pelo SHA completo do commit
-        uses: docker/build-push-action@v5
+        # v5
+        uses: docker/build-push-action@ca052bb54ab0790a636c9b5f226502c73d547a25 # v5
         with:
           context: .
           file: ./src/InterfacesExternas/FastFood.OrderHub.Api/Dockerfile
@@ -63,9 +58,8 @@ jobs:
           cache-to: type=inline
 
       - name: Build and push Migrator image
-        # v5.x.x - Obter SHA do commit da versão desejada em: https://github.com/docker/build-push-action
-        # TODO: Substituir @v5 pelo SHA completo do commit
-        uses: docker/build-push-action@v5
+        # v5
+        uses: docker/build-push-action@ca052bb54ab0790a636c9b5f226502c73d547a25 # v5
         with:
           context: .
           file: ./src/InterfacesExternas/FastFood.OrderHub.Migrator/Dockerfile
