--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -37,8 +37,8 @@ jobs:
 
   deploy:
     needs: check-quality
-    # Security: Only deploy if workflow_run is from the same repository and main branch, or manual trigger
-    if: ${{ (github.event_name == 'workflow_run' && github.event.workflow_run.head_repository.full_name == github.repository && github.event.workflow_run.head_branch == 'main' && github.event.workflow_run.conclusion == 'success') || github.event_name == 'workflow_dispatch' }}
+    # Security: Only deploy if workflow_run is from the same repository and main branch, or manual trigger from same repository
+    if: ${{ (github.event_name == 'workflow_run' && github.event.workflow_run.head_repository.full_name == github.repository && github.event.workflow_run.head_branch == 'main' && github.event.workflow_run.conclusion == 'success') || (github.event_name == 'workflow_dispatch' && github.repository_owner != '') }}
     runs-on: ubuntu-latest
     
     outputs:
@@ -47,13 +47,36 @@ jobs:
       migrator-image: ${{ steps.set-tag.outputs.migrator-image }}
     
     steps:
+    - name: Verify repository security
+      run: |
+        # Security check: Ensure we're not running from a fork
+        if [ "${{ github.event_name }}" == "workflow_run" ]; then
+          if [ "${{ github.event.workflow_run.head_repository.full_name }}" != "${{ github.repository }}" ]; then
+            echo "❌ Security: Cannot deploy from fork repository"
+            exit 1
+          fi
+          if [ "${{ github.event.workflow_run.head_branch }}" != "main" ]; then
+            echo "❌ Security: Can only deploy from main branch"
+            exit 1
+          fi
+          echo "✅ Security: workflow_run is from same repository and main branch"
+        elif [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          # For manual triggers, verify we're in the same repository
+          if [ -z "${{ github.repository_owner }}" ]; then
+            echo "❌ Security: Cannot determine repository owner"
+            exit 1
+          fi
+          echo "✅ Security: workflow_dispatch is from same repository"
+        fi
+    
     - name: Checkout code
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
       with:
-        # Security: Only checkout from main branch to prevent execution of untrusted code from forks
-        # workflow_run events are only triggered for main branch (see branches filter on line 8-9)
-        # workflow_dispatch uses github.ref which is safe for manual triggers
-        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref || 'main' }}
+        # Security: Always checkout from main branch to prevent execution of untrusted code from forks
+        # - workflow_run events are only triggered for main branch (see branches filter on line 8-9)
+        # - workflow_dispatch: For manual triggers, we explicitly use 'main' to ensure security
+        #   This prevents any potential execution of untrusted code from forks
+        ref: 'main'
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@ff717079ee2060e4bcee96c4779b553acc87447c # v4
